fix: header on iOS Safari goes off the screen

--- a/src/nodejs/styles/main.css
+++ b/src/nodejs/styles/main.css
@@ -14,6 +14,9 @@ body {
     -webkit-touch-callout: none;
     overscroll-behavior-x: none; /* Disables navigate back/forward w/ swipe, doesn't work on Safari */
     width: 100%;
+    max-height: 100vh;
+    max-height: calc(var(--vh, 1vh) * 100);
+    transition: max-height 150ms ease-in;
 }
 
 /* prevent pull-to-refresh for Safari 16+ */
